maayos na ung dropdown ng purchase
pati swal sa delete ni azul

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ config/config.php
 database/database.php
 database/database.php
 config/config.php
+database/database.php
+config/config.php
+database/database.php
